--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,15 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".ViewAllRepliesCustomAdapter"
+            android:exported="false" />
+        <activity
+            android:name=".MyReviews"
+            android:exported="false" />
+        <activity
+            android:name=".MainReviews"
+            android:exported="false" />
+        <activity
             android:name=".HomePage"
             android:exported="false" />
         <activity
