--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,12 @@
         android:theme="@style/Theme.ReviewApp"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-
+        <activity
+            android:name=".AllReviews"
+            android:exported="false" />
         <activity
             android:name=".MyReviews"
             android:exported="false" />
-
         <activity
             android:name=".HomePage"
             android:exported="false" />
