--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,5 +46,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation ('com.android.volley:volley:1.2.1')
     implementation ('com.github.PhilJay:MPAndroidChart:v3.1.0')
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0'
+
 
 }
